fix width overflow

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 header {
-    position: relative;
-    width: 100vw;
+    position: fixed;
+    width: 100%;
     height: 50px;
     background: linear-gradient(90deg, rgb(233, 236, 183), rgb(235, 209, 124), rgb(238, 240, 218));
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
