--- a/styles/section1.css
+++ b/styles/section1.css
@@ -1,5 +1,4 @@
 #section1 {
-    width: 100%;
     height: 100%;
     background-image: url("../images/imagebg1.png");
     background-position: center;
