--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+
 }
 
 body {
@@ -20,6 +21,7 @@ body {
 
 main {
     height: 100%;
+    width: 100%;
 }
 
 li {
